[package]
name = "actix-todo"
version = "0.1.0"
authors = ["Julio Daniel Reyes <nemesiscodex@gmail.com>"]
edition = "2018"

[features]
default = []

# Integration tests
integration = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "1.0.0"
actix-web = "2.0.0"
actix-http = "1.0.1"
actix-service = "1.0.5"
actix-cors = "0.2.0"
futures = "0.3.4"
serde = { version = "1.0.104", features = ["derive"] }
dotenv = "0.15.0"
config = "0.10.1"
tokio-pg-mapper = "0.1.4"
tokio-pg-mapper-derive = "0.1.4"
deadpool-postgres = "0.5.0"
tokio-postgres = "0.5.1"
slog = "2.5.2"
slog-term = "2.5.0"
slog-async = "2.4.0"
slog-envlogger = "2.2.0"
derive_more = "0.99.3"
jsonwebtoken = "7.1.0"
bcrypt = "0.6.2"


[dependencies.diesel]
version = "1.4.3"
features = ["postgres", "r2d2", "chrono"]

[dependencies.chrono]
version = "0.4.11"
features = ["serde"]

[dependencies.uuid]
version = "0.8.1"
features = ["v4"]



[dev-dependencies]
lazy_static = "1.4.0"
serde_json = "1.0.48"